force-app/main/default/objects/OpportunityContactRole/fields/Contact_Role_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_ID_18__c</fullName>
    <description>RO-2043</description>
    <formula>CASESAFEID( Id )</formula>
    <label>Contact Role ID (18)</label>
    <type>Text</type>
</CustomField>