force-app/main/default/objects/OpportunityContactRole/fields/Engagement_Score_Contact__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score_Contact__c</fullName>
    <description>RO - 1653</description>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>