force-app/main/default/objects/OpportunityContactRole/fields/MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>MQL_Type__c</fullName>
    <description>RO - 1653</description>
    <label>MQL Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>