force-app/main/default/objects/OpportunityContactRole/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <formula>Opportunity.Opportunity_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>