force-app/main/default/objects/OpportunityContactRole/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>RO - 1737</description>
    <formula>TEXT (Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>