force-app/main/default/objects/OpportunityContactRole/fields/Trigger_for_Contact_Role_Addition__c.field-meta.xml
<CustomField>
    <fullName>Trigger_for_Contact_Role_Addition__c</fullName>
    <description>RO-2303</description>
    <label>Trigger for Contact Role Addition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Role_Origins</valueSetName>
    </valueSet>
</CustomField>